lab1/Test/L1-A-13-83.output
Error Type A at Line 1
Error Type A at Line 5
Error Type A at Line 6
Error Type A at Line 8
Error Type B at Line 13
Error Type B at Line 15
Error Type B at Line 15
Error Type B at Line 21
Error Type B at Line 38
