lab1/Test/L1-A-13-83.cmm
struct uJC3MUSO BRFN5XtIKzsSgg4K7l %[ 2133693344 ] 
  , SNA7t 

;
struct ~{
  int H34Hfx `;
  struct oA3qQmIGCzXVPVuUP {
  }#vX65T0mbwtSYNQ ;
}A 
;
int kB ( int bK64oBXeUHwJmNr , struct {
}YtyerreWA9P9 ) {
  int iHNOgnE3go8 , , HpwJxPItSD3xP ;
  int Raxj16WhOzt_8Ry6Qh = HooJAL88W2Tb5cPYRV0 
  if ( vW_PoQ15VeWKrKPOWk ) }else xjMG = p0AKWCQmgYV_FXC 
  && GhBezGbX1QIEFuTKpms == jasDcaKiyV2C2U - - ! bWVK 
  [ LGwJi2yhO8aMDI || XeTb09R7dyl0C + tQWbFg8 / GNPC 
  ( xVhP > - ! ! _OW2OQZ [ ZH2bycOvhAy6TYpyM != hBZB0 
  ( OBMVi2wQpNvxEt_ , MMc1ArplP >= ! ! - ( m_NcCtZlVfNvKILEtlD7 
  < - - EXPzKVVkCipja ( VIn7owMv7 , w5r060g4Sk3 , 644556304 
  ) . XkKGE ) ) - O . aw57dMdtr . Z7ENUn ] . <= hL1nLaM89UnG07Sbi_Gx 
  ( ) * ! - - - 2036757334.1074575353 ) ] ;

}
float ;
int aSPVUZ7TStB0rIlrw3Et ( ) {
}
int ;
int ;
int ;
int ;
int ;
int p ( ) {
  w ;
  vFv2kKFabKiF1 ;
  y9kVu03lmhHUtbi ;
  dRcgQff2PQU ;
  ;
  QYAVDbd ;
  if ( VExlRiTsqiPt05z4L4 )   while ( eO8kNUmKCkCOQ 
    )   d6JRmrtKyYYfgAOu ;

else   if ( ARDK68wEaesWr )   return B22GV ;


}
